fixing bugs with github website views

--- a/jupytertteditor/docs/showcase.ipynb
+++ b/jupytertteditor/docs/showcase.ipynb
@@ -1,6 +1,20 @@
 {
   "cells": [
     {
+      "cell_type": "raw",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "---\n",
+        "title: \"Jupyter Truth Table Editor — Showcase\"\n",
+        "format: gfm\n",
+        "---"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
